# InvoiceFlow

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py  work.py
src/api/: api_v1.py
src/api/v1/: transfer.py
src/core/: settings.py
src/core/common/: error_handler.py  fake_person.py  validates.py
src/domains/: invoice_management.py  payment_processing.py
src/repository/: invoice_repository.py  payment_repository.py
tests/: conftest.py  test_main.py
tests/test_api/test_v1/: test_transfer.py
tests/test_common/: test_fake_person.py  test_validates.py
tests/test_domains/: test_invoice_management.py  test_payment_processing.py
